<resources>
    <string name="app_name">WorkRate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">Home</string>
    <string name="search_icon">Search</string>
    <string name="add_icon">Add</string>
    <string name="map_icon">Map</string>
    <string name="profile_icon">Profile</string>
    <string name="union">Messages</string>
    <string name="Bussiness_icon">Bussiness</string>"
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>